# learn_opengl

./: CMakeLists.txt  README.md  app.cpp  app.h  application.cpp  application.h  engine.cpp  engine.h  glad.c  learn_opengl.h  main.cpp  quad.cpp  quad.h  triangle.cpp  triangle.h  window.cpp
engine/: CMakeLists.txt  application.h  engine.cpp  engine.h  learn_opengl.h
engine/platform/: CMakeLists.txt  window.cpp  window.h
